working spark connect version